--- a/config.json
+++ b/config.json
@@ -6,9 +6,9 @@
       "callback" : "http://hc-chat.chito20s.c9.io/authtw/callback"
     },
     "facebook": {
-      "clientid" : "447241648681212",
-      "clientsecret" : "0425c311c7896527fa7cab47731ee8c1",
-      "callback" : "http://hc-chat.chito20s.c9.io/authfb/callback"
+      "clientid" : "329613163813777",
+      "clientsecret" : "05fd646b7ba719c7a64a6f2608d4fc86",
+      "callback" : "http://192.168.42.173:3000/authfb/callback"
     }
   }
 }
